--- a/projet-argentbank/public/index.html
+++ b/projet-argentbank/public/index.html
@@ -5,11 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <script src="https://kit.fontawesome.com/959f234b81.js" crossorigin="anonymous"></script>
     <meta
       name="description"
       content="ArgentBank Website"
     />
- 
     <title>ArgentBank</title>
   </head>
   <body>
